--- a/css/style.css
+++ b/css/style.css
@@ -279,7 +279,7 @@ body {
       rgba(255, 255, 255, 0.2),
       rgba(0, 0, 0, 0.5)
     ),
-    url(/img/banner-1.jpg);
+    url(img/banner-1.jpg);
   flex: 1;
   background-attachment: fixed;
   background-repeat: no-repeat;
